@@ -181,8 +181,8 @@ When using this project to create the node pools, the following is done:
 
 ----
 node_pools = {
-  "np1" = ["VM.Standard2.1", 1]
-  "np2" = ["VM.Standard2.2", 1]
+  "np1" = ["VM.Standard2.1", 1, 50]
+  "np2" = ["VM.Standard2.2", 1, 100]
 }
 ----
 
@@ -190,9 +190,9 @@ will create 2 node pools (np1 and np2) whereas
 
 ----
 node_pools = {
-  "np1" = ["VM.Standard2.1", 1]
-  "np2" = ["VM.Standard2.2", 1]
-  "np3" = ["VM.Standard2.4", 1]
+  "np1" = ["VM.Standard2.1", 1, 50]
+  "np2" = ["VM.Standard2.2", 1, 100]
+  "np3" = ["VM.Standard2.4", 1, 200]
 }
 ----
 
@@ -208,19 +208,19 @@ will create 3 node pools (np1, np2 and np3).
 
 ----
 node_pools = {
-  "np1" = ["VM.Standard2.1", 1]
-  "np2" = ["BM.Standard2.52", 1]
+  "np1" = ["VM.Standard2.1", 1, 50]
+  "np2" = ["BM.Standard2.52", 1, 100]
 }
 ----
 
 In the above example, workers in node pool np1 will all have a shape of VM.Standard2.1 whereas workers in node pool np2 will all have a shape of BM.Standard.2.52.
 
-* the total number of worker nodes that will be created for this node pool. This is controlled by the 2nd element in the tuple for each node pool. A minimum of 3 worker nodes per node pool will be created e.g.
+* the total number of worker nodes that will be created for this node pool. This is controlled by the 2nd element in the tuple for each node pool. A minimum of 1 worker nodes per node pool will be created e.g.
 
 ----
 node_pools = {
-  "np1" = ["VM.Standard2.1", 1]
-  "np2" = ["VM.Standard2.2", 5]
+  "np1" = ["VM.Standard2.1", 1, 50]
+  "np2" = ["VM.Standard2.2", 5, 100]
 }
 ----
 
@@ -242,7 +242,7 @@ The diagram below shows a cluster with 1 node pool of size 3 i.e. setting the fo
 
 ----
 node_pools = {
-  "np1" = ["VM.Standard2.1", 3]
+  "np1" = ["VM.Standard2.1", 3, 50]
 }
 ----
 
@@ -257,11 +257,11 @@ You can increase the number of node pools by adding more entries in the node_poo
 
 ----
 node_pools = {
-  "np1" = ["VM.Standard2.1", 3]
-  "np2" = ["VM.Standard2.1", 3]
-  "np3" = ["VM.Standard2.1", 3]
-  "np4" = ["VM.Standard2.1", 3]
-  "np5" = ["VM.Standard2.1", 3]
+  "np1" = ["VM.Standard2.1", 3, 50]
+  "np2" = ["VM.Standard2.1", 3, 50]
+  "np3" = ["VM.Standard2.1", 3, 50]
+  "np4" = ["VM.Standard2.1", 3, 50]
+  "np5" = ["VM.Standard2.1", 3, 50]
 }
 ----
 
@@ -287,9 +287,9 @@ Similarly, you can support mixed workloads by adding node pools of different sha
 
 ----
 node_pools = {
-  "np1" = ["VM.Standard.E2.1", 9]
-  "np2" = ["VM.Standard2.24", 6]
-  "np3" = ["BM.Standard1.36", 3]
+  "np1" = ["VM.Standard.E2.1", 9, 50]
+  "np2" = ["VM.Standard2.24", 6, 50]
+  "np3" = ["BM.Standard1.36", 3, 50]
 }
 ----
 
